// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RenderInputTextField renders html for number type 1`] = `
<div>
  <div
    class="pgn__form-group"
  >
    <label
      class="pgn__form-label"
      for="Test-text-label"
    >
      TestLabel
    </label>
    <div
      class="pgn__form-control-decorator-group"
    >
      <input
        class="form-control"
        id="Test-text-label"
        maxlength=""
        name="Test"
        placeholder=""
        type="number"
      />
    </div>
  </div>
</div>
`;

exports[`RenderInputTextField renders html for text 1`] = `
<div>
  <div
    class="pgn__form-group"
  >
    <label
      class="pgn__form-label"
      for="Test-text-label"
    >
      TestLabel
    </label>
    <div
      class="pgn__form-control-decorator-group"
    >
      <input
        class="form-control"
        id="Test-text-label"
        maxlength=""
        name="Test"
        placeholder=""
        type="text"
      />
    </div>
  </div>
</div>
`;
